cluster/apps/potber/potber-auth/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potber-auth-staging
  namespace: potber
  labels:
    app: potber-auth-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: potber-auth-staging
  template:
    metadata:
      labels:
        app: potber-auth-staging
    spec:
      containers:
        - name: potber-auth-staging
          image: spuxx/potber-auth:main-20240311-143436-7454f9340cb6ca4d2c085f4a7b4ee018799f90a2 # {"$imagepolicy": "potber:potber-auth-staging"}
          ports:
            - containerPort: 3000
          securityContext:
            runAsNonRoot: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
