cluster/apps/potber/potber-auth/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: potber-auth-staging
  namespace: potber
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "*.potber.de"
      secretName: potber.de
  rules:
    - host: auth-test.potber.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: potber-auth-staging
                port:
                  number: 3000
